--- a/ecovero_2022q3.html
+++ b/ecovero_2022q3.html
@@ -10,42 +10,18 @@
       <title>Lenzing Digital Performance Dashboards</title>
 
       <link rel="stylesheet" href="style.css">
-      <nav class="navbar navbar-expand-lg" style="background-color: #ffffff;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="home.html">
-            <img src="./statics/lenzing_logo.png" width="170" alt="Lenzing Logo">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav align-items-end me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="home.html" style="margin-right: 40px; font-size: 120%;">Home</a>
-              </li>
+      <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
+      <script>  
+      $(function(){ 
+        $("#header").load("header.html");
+      }); 
+      </script>  
 
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-right: 30px; font-size: 120%; color: black;">
-                  Brand
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="tencel_2022q3.html">TENCEL™</a></li>
-                  <li><a class="dropdown-item" href="ecovero_2022q3.html">LENZING™ ECOVERO™</a></li>
-                  <li><a class="dropdown-item" href="veocel_2022q3.html">VEOCEL™</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="guidelines.html" target="_blank" rel="noopener noreferrer" style="font-size: 120%;">Guidelines</a>
-              </li>
-            </ul>
-
-          </div>
-        </div>
-      </nav>
     </head>
 
     <center>
       <body>
+        <div id="header"></div>
         <br>
         <br>
         <p><a href="ecovero_2022q2.html">2022 Q2 Dashboard</a>  |  <a href="ecovero_2022q3.html">2022 Q3 Dashboard</a></p>
