--- a/guidelines.html
+++ b/guidelines.html
@@ -11,38 +11,12 @@
 
       <link rel="stylesheet" href="style.css">
 
-      <nav class="navbar navbar-expand-lg" style="background-color: #ffffff;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="home.html">
-            <img src="./statics/lenzing_logo.png" width="170" alt="Lenzing Logo">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav align-items-end me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="home.html" style="margin-right: 40px; font-size: 120%;">Home</a>
-              </li>
-
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-right: 30px; font-size: 120%; color: black;">
-                  Brand
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="tencel.html">TENCEL™</a></li>
-                  <li><a class="dropdown-item" href="ecovero.html">LENZING™ ECOVERO™</a></li>
-                  <li><a class="dropdown-item" href="veocel.html">VEOCEL™</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="guidelines.html" target="_blank" rel="noopener noreferrer" style="font-size: 120%;">Guidelines</a>
-              </li>
-            </ul>
-
-          </div>
-        </div>
-      </nav>
+      <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
+      <script>  
+      $(function(){ 
+        $("#header").load("header.html");
+      }); 
+      </script>  
       
       <style>
         * {
@@ -87,6 +61,7 @@
 
     <center>
     <body>
+      <div id="header"></div>
       <br>
       <div class="container">
         <h3 style="text-align: left;">Guidelines</h3>
