--- a/ecovero_2022q2.html
+++ b/ecovero_2022q2.html
@@ -23,7 +23,7 @@
         <div id="header"></div>
         <br>
         <br>
-        <p><a href="ecovero_2022q2.html">2022 Q2 Dashboard</a>  |  <a href="ecovero_2022q3.html">2022 Q3 Dashboard</a></p>
+        <div id="dashboardversions"></div>
         <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
         <br>
         <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'></script>
