--- a/tencel_2022q3.html
+++ b/tencel_2022q3.html
@@ -15,6 +15,7 @@
       <script>  
       $(function(){ 
         $("#header").load("header.html");
+        $("#dashboardversions").load("dashboard_versions.html");
       }); 
       </script>  
     </head>
@@ -24,7 +25,7 @@
       <div id="header"></div>
       <br>
       <br>
-      <p><a href="tencel_2022q2.html">2022 Q2 Dashboard</a>  |  <a href="tencel_2022q3.html">2022 Q3 Dashboard</a></p>
+      <div id="dashboardversions"></div>
       <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
 
       <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'></script>
