--- a/ecovero_2022q2.html
+++ b/ecovero_2022q2.html
@@ -14,6 +14,7 @@
       <script>  
       $(function(){ 
         $("#header").load("header.html");
+        $("#dashboardversions-e").load("dashboard_versions_ecovero.html");
       }); 
       </script>  
     </head>
@@ -23,7 +24,7 @@
         <div id="header"></div>
         <br>
         <br>
-        <div id="dashboardversions"></div>
+        <div id="dashboardversions-e"></div>
         <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
         <br>
         <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'></script>
