--- a/tencel_2022q3.html
+++ b/tencel_2022q3.html
@@ -15,7 +15,7 @@
       <script>  
       $(function(){ 
         $("#header").load("header.html");
-        $("#dashboardversions").load("dashboard_versions.html");
+        $("#dashboardversions-t").load("dashboard_versions_tencel.html");
       }); 
       </script>  
     </head>
@@ -25,7 +25,7 @@
       <div id="header"></div>
       <br>
       <br>
-      <div id="dashboardversions"></div>
+      <div id="dashboardversions-t"></div>
       <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
 
       <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'></script>
