--- a/tencel_2022q4.html
+++ b/tencel_2022q4.html
@@ -28,18 +28,12 @@
       <div id="dashboardversions-t"></div>
       <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
 
-      <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'></script>
-      <div class='tableauPlaceholder' style='width: 1300px; height: 759px;'>
-        <object class='tableauViz' width='1300' height='759' style='display:none;'>
-          <param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> 
-          <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;bcwglobal' />
-          <param name='name' value='TENCELQuarterlyDashboard&#47;Cover' />
-          <param name='tabs' value='no' />
-          <param name='toolbar' value='yes' /><param name='showAppBanner' value='false' />
-        </object>
-      </div>
+      <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script>
+      <tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2022Q4TENCELQuarterlyDashboard/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
     
     </body>
 
     </center>
 </html>
+
+
