--- a/ecovero_2022q4.html
+++ b/ecovero_2022q4.html
@@ -28,15 +28,8 @@
         <div id="dashboardversions-e"></div>
         <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
         <br>
-        <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'></script>
-        <div class='tableauPlaceholder' style='width: 1300px; height: 759px;'>
-          <object class='tableauViz' width='1300' height='759' style='display:none;'>
-            <param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> 
-            <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;bcwglobal' />
-            <param name='name' value='2022Q3ECOVEROQuarterlyDashboard&#47;Cover' /><param name='tabs' value='no' />
-            <param name='toolbar' value='yes' /><param name='showAppBanner' value='false' />
-          </object>
-        </div>
+        <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script>
+        <tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2022Q4ECOVEROQuarterlyDashboard/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
 
         <br>
         <p style="color:#414042; font-size:70%;"> ​Copyright @2022 by BCW Global </p>
