--- a/ecovero_2022q4.html
+++ b/ecovero_2022q4.html
@@ -28,9 +28,10 @@
         <div id="dashboardversions-e"></div>
         <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
         <br>
-        <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script>
-        <tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2022Q4ECOVEROQuarterlyDashboard/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
-
+        <div class="dashboard-container">
+          <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script>
+          <tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2022Q4ECOVEROQuarterlyDashboard/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
+        </div>
         <br>
         <p style="color:#414042; font-size:70%;"> ​Copyright @2022 by BCW Global </p>
       
