--- a/tencel_2022q4.html
+++ b/tencel_2022q4.html
@@ -20,20 +20,19 @@
       </script>  
     </head>
 
-    <center>
+
     <body>
-      <div id="header"></div>
       <br>
       <br>
       <div id="dashboardversions-t"></div>
-      <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
-
-      <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script>
-      <tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2022Q4TENCELQuarterlyDashboard/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
+      <p style="text-align: center;"> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
     
+      <div class="dashboard-container">
+        <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script>
+        <tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2022Q4TENCELQuarterlyDashboard/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
+      </div>
     </body>
 
-    </center>
 </html>
 
 
