--- a/veocel_2022q4.html
+++ b/veocel_2022q4.html
@@ -28,8 +28,10 @@
       <div id="dashboardversions-v"></div>
       <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
       <br>
-      <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script>
-      <tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2022Q4VEOCELQuarterlyDashboard/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
+      <div class="dashboard-container">
+        <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script>
+        <tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2022Q4VEOCELQuarterlyDashboard/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
+      </div>
       <br>
       <br>
       <br>
