--- a/tencel_2022q4.html
+++ b/tencel_2022q4.html
@@ -20,7 +20,7 @@
       </script>  
     </head>
 
-
+    <center>
     <body>
       <div id="header"></div>
       <br>
@@ -33,7 +33,7 @@
         <tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2022Q4TENCELQuarterlyDashboard/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
       </div>
     </body>
-
+  </center>
 </html>
 
 
