--- a/dashboard_versions_veocel.html
+++ b/dashboard_versions_veocel.html
@@ -1,1 +1,10 @@
-<p><a href="veocel_2022q2.html">2022 Q2 Dashboard</a>  |  <a href="veocel_2022q3.html">2022 Q3 Dashboard</a>  |  <a href="veocel_2022q4.html">2022 Q4 Dashboard</a></p>
+<li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-right: 30px; font-size: 120%; color: black;">
+              Period
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="veocel_2022q2.html">2022 Q2 Dashboard</a></li>
+              <li><a class="dropdown-item" href="veocel_2022q3.html">2022 Q3 Dashboard</a></li>
+              <li><a class="dropdown-item" href="veocel_2022q4.html">2022 Q4 Dashboard</a></li>
+            </ul>
+</li>
