--- a/dashboard_versions_veocel.html
+++ b/dashboard_versions_veocel.html
@@ -1,4 +1,5 @@
-<li class="nav-item dropdown">
+<div class="dropdown-container">
+ <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-right: 30px; font-size: 120%; color: black;">
               Period
             </a>
@@ -7,4 +8,5 @@
               <li><a class="dropdown-item" href="veocel_2022q3.html">2022 Q3 Dashboard</a></li>
               <li><a class="dropdown-item" href="veocel_2022q4.html">2022 Q4 Dashboard</a></li>
             </ul>
-</li>
+ </li>
+</div>
