--- a/dashboard_versions_veocel.html
+++ b/dashboard_versions_veocel.html
@@ -1,12 +1,9 @@
 <div class="dropdown-container">
- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-right: 30px; font-size: 120%; color: black;">
-              Period
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="veocel_2022q2.html">2022 Q2 Dashboard</a></li>
-              <li><a class="dropdown-item" href="veocel_2022q3.html">2022 Q3 Dashboard</a></li>
-              <li><a class="dropdown-item" href="veocel_2022q4.html">2022 Q4 Dashboard</a></li>
-            </ul>
- </li>
+  <button data-toggle="dropdown" class="btn btn-success dropdown-toggle btn-xs" type="button" aria-expanded="true">Periods <span class="caret"></span>
+  </button>
+  <ul role="menu" class="dropdown-menu">
+      <li><a class="dropdown-item" href="veocel_2022q2.html">2022 Q2 Dashboard</a></li>
+      <li><a class="dropdown-item" href="veocel_2022q3.html">2022 Q3 Dashboard</a></li>
+      <li><a class="dropdown-item" href="veocel_2022q4.html">2022 Q4 Dashboard</a></li>
+  </ul>
 </div>
