--- a/dashboard_versions_veocel.html
+++ b/dashboard_versions_veocel.html
@@ -1,5 +1,5 @@
 <div class="dropdown-container">
-  <button data-bs-toggle="dropdown" class="btn btn-success dropdown-toggle btn-xs" type="button" aria-expanded="false">Period <span class="caret"></span>
+  <button data-bs-toggle="dropdown" class="nav-link dropdown-toggle" type="button" aria-expanded="false" style="margin-right: 30px; font-size: 120%; color: blue;">2022 <span class="caret"></span>
   </button>
   <ul role="menu" class="dropdown-menu">
       <li><a class="dropdown-item" href="veocel_2022q2.html">2022 Q2 Dashboard</a></li>
