--- a/dashboard_versions_tencel.html
+++ b/dashboard_versions_tencel.html
@@ -2,7 +2,7 @@
   <button data-bs-toggle="dropdown" class="nav-link dropdown-toggle" type="button" aria-expanded="false" style= "margin-right: 30px; font-size: 120%; background-color: #87CEFA; color: black;">2022 <span class="caret"></span>
   </button>
   <ul role="menu" class="dropdown-menu">
-      <li><a class="dropdown-item" href="tence_2022q2.html">2022 Q2 Dashboard</a></li>
+      <li><a class="dropdown-item" href="tencel_2022q2.html">2022 Q2 Dashboard</a></li>
       <li><a class="dropdown-item" href="tencel_2022q3.html">2022 Q3 Dashboard</a></li>
       <li><a class="dropdown-item" href="tencel_2022q4.html">2022 Q4 Dashboard</a></li>
   </ul>
