--- a/tencel_2023q1.html
+++ b/tencel_2023q1.html
@@ -11,7 +11,8 @@
 
       <link rel="stylesheet" href="style.css">
 
-      <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
+      <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+      <div style="display:block;">
       <script>  
       $(function(){ 
         $("#header").load("header.html");
@@ -24,6 +25,7 @@
         $("#dashboardversions-t").load("dashboard_versions_tencel_2023.html");
       });
       </script>
+      </div>
     </head>
 
     <center>
