--- a/tencel_2023q1.html
+++ b/tencel_2023q1.html
@@ -12,13 +12,24 @@
       <link rel="stylesheet" href="style.css">
 
       <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-      <script>  
-      $(function(){ 
-        $("#header").load("header.html");
-        $("#dashboardversions-t").load("dashboard_versions_tencel.html");
-        $("#dashboardversions-t").load("dashboard_versions_tencel_2023.html");
-      }); 
-      </script>
+      <div style="display: inline">
+      <div class="dropdown-container" style="display: inline-block">
+        <button data-bs-toggle="dropdown" class="nav-link dropdown-toggle" type="button" aria-expanded="false" style= "margin-right: 30px; font-size: 120%; background-color: #ABEBC6; color: black;">2022 <span class="caret"></span>
+        </button>
+        <ul role="menu" class="dropdown-menu">
+        <li><a class="dropdown-item" href="tencel_2022q2.html">2022 Q2 Dashboard</a></li>
+        <li><a class="dropdown-item" href="tencel_2022q3.html">2022 Q3 Dashboard</a></li>
+        <li><a class="dropdown-item" href="tencel_2022q4.html">2022 Q4 Dashboard</a></li>
+        </ul>
+      </div>
+      <div class="dropdown-container" style="display: inline-block">
+        <button data-bs-toggle="dropdown" class="nav-link dropdown-toggle" type="button" aria-expanded="false" style= "margin-right: 30px; font-size: 120%; background-color: #ABEBC6; color: black;">2023 <span class="caret"></span>
+        </button>
+        <ul role="menu" class="dropdown-menu">
+            <li><a class="dropdown-item" href="tencel_2023q1.html">2023 Q1 Dashboard</a></li>
+        </ul>
+      </div>
+      </div>
     </head>
 
     <center>
