--- a/tencel_2022q2.html
+++ b/tencel_2022q2.html
@@ -15,7 +15,8 @@
       <script>  
       $(function(){ 
         $("#header").load("header.html");
-        $("#dashboardversions-t").load("dashboard_versions_tencel.html");
+        $("#dashboardversions-2022").load("dashboard_versions_tencel.html");
+        $("#dashboardversions-2023").load("dashboard_versions_tencel_2023.html");
       }); 
       </script>  
     </head>
@@ -25,7 +26,11 @@
       <div id="header"></div>
       <br>
       <br>
-      <div id="dashboardversions-t"></div>
+      <div style="display: inline">
+      <div style="display: inline-block" id="dashboardversions-2022"></div>
+      <div style="display: inline-block" id="dashboardversions-2023"></div>
+      </div>
+      <br>
       <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
 
       <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'></script>
