--- a/veocel_2022q2.html
+++ b/veocel_2022q2.html
@@ -13,10 +13,11 @@
 
       <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
       <script>  
-      $(function(){ 
+      $(function(){
         $("#header").load("header.html");
-        $("#dashboardversions-v").load("dashboard_versions_veocel.html");
-      }); 
+        $("#dashboardversions-2022").load("dashboard_versions_veocel.html");
+        $("#dashboardversions-2023").load("dashboard_versions_veocel_2023.html");
+      });
       </script>  
     </head>
 
@@ -25,7 +26,11 @@
       <div id="header"></div>
       <br>
       <br>
-      <div id="dashboardversions-v"></div>
+      <div style="display: inline">
+      <div style="display: inline-block" id="dashboardversions-2022"></div>
+      <div style="display: inline-block" id="dashboardversions-2023"></div>
+      </div>
+      <br>
       <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
       <br>
       <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'></script>
