--- a/ecovero_2022q3.html
+++ b/ecovero_2022q3.html
@@ -12,20 +12,24 @@
       <link rel="stylesheet" href="style.css">
       <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
       <script>  
-      $(function(){ 
+      $(function(){
         $("#header").load("header.html");
-        $("#dashboardversions-e").load("dashboard_versions_ecovero.html");
-      }); 
-      </script>  
-
+        $("#dashboardversions-2022").load("dashboard_versions_ecovero.html");
+        $("#dashboardversions-2023").load("dashboard_versions_ecovero_2023.html");
+      });
+      </script>
     </head>
 
     <center>
-      <body>
-        <div id="header"></div>
-        <br>
-        <br>
-        <div id="dashboardversions-e"></div>
+    <body>
+      <div id="header"></div>
+      <br>
+      <br>
+      <div style="display: inline">
+      <div style="display: inline-block" id="dashboardversions-2022"></div>
+      <div style="display: inline-block" id="dashboardversions-2023"></div>
+      </div>
+      <br>
         <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
         <br>
         <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'></script>
