--- a/ecovero_2023q1.html
+++ b/ecovero_2023q1.html
@@ -34,7 +34,7 @@
         <br>
         <div class="dashboard-container">
           <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script>
-          <tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2022Q4ECOVEROQuarterlyDashboard/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
+          <tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2023Q1ECOVEROQuarterlyDashboard/Cover?:origin=card_share_link&:embed=n' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
         </div>
         <br>
         <p style="color:#414042; font-size:70%;"> ​Copyright @2022 by BCW Global </p>
