--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #ffffff; opacity: 100%;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="home.html">
+      <a class="navbar-brand" href="https://lenzinggroup.github.io/home.html">
         <img src="./statics/lenzing_logo.png" width="170" alt="Lenzing Logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
