--- a/dashboard_versions_tencel_2023.html
+++ b/dashboard_versions_tencel_2023.html
@@ -3,5 +3,6 @@
   </button>
   <ul role="menu" class="dropdown-menu">
       <li><a class="dropdown-item" href="tencel_2023q1.html">2023 Q1 Dashboard</a></li>
+      <li><a class="dropdown-item" href="tencel_2023q2.html">2023 Q2 Dashboard</a></li>
   </ul>
 </div>
