--- a/tencel_2023q2.html
+++ b/tencel_2023q2.html
@@ -34,8 +34,7 @@
       <p style="text-align: center;"> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
       <br>
       <div class="dashboard-container">
-        <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script><tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2023Q2TENCELQuarterlyDashboardFinalV3/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
-      </div>
+        <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script><tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2023Q2TENCELQuarterlyDashboardFinalV4/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>      </div>
     </body>
   </center>
 </html>
