--- a/veocel_2023q2.html
+++ b/veocel_2023q2.html
@@ -34,8 +34,7 @@
       <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
       <br>
       <div class="dashboard-container">
-        <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script>
-        <tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2023Q2VEOCELQuarterlyDashboardFinal/Cover?:origin=card_share_link&:embed=n' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
+        <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script><tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2023Q2VEOCELQuarterlyDashboardFinalV2/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
       </div>
       <br>
       <br>
