--- a/veocel_2024q1.html
+++ b/veocel_2024q1.html
@@ -17,6 +17,7 @@
         $("#header").load("header.html");
         $("#dashboardversions-2022").load("dashboard_versions_veocel.html");
         $("#dashboardversions-2023").load("dashboard_versions_veocel_2023.html");
+        $("#dashboardversions-2024").load("dashboard_versions_veocel_2024.html");
       });
       </script>  
     </head>
@@ -36,7 +37,7 @@
       <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
       <br>
       <div class="dashboard-container">
-        <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script><tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2023Q4VEOCELQuarterlyDashboardFinalV3/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
+        <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script><tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2024Q1VEOCELQuarterlyDashboardFinalV3/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>      
       </div>
       <br>
       <br>
