--- a/dashboard_versions_veocel_2024.html
+++ b/dashboard_versions_veocel_2024.html
@@ -3,5 +3,6 @@
   </button>
   <ul role="menu" class="dropdown-menu">
       <li><a class="dropdown-item" href="veocel_2024q1.html">2024 Q1 Dashboard</a></li>
+      <li><a class="dropdown-item" href="veocel_2024q2.html">2024 Q2 Dashboard</a></li>
   </ul>
 </div>
