--- a/dashboard_versions_tencel_2024.html
+++ b/dashboard_versions_tencel_2024.html
@@ -4,5 +4,6 @@
   <ul role="menu" class="dropdown-menu">
       <li><a class="dropdown-item" href="tencel_2024q1.html">2024 Q1 Dashboard</a></li>
       <li><a class="dropdown-item" href="tencel_2024q2.html">2024 Q2 Dashboard</a></li>
+      <li><a class="dropdown-item" href="tencel_2024q3.html">2024 Q3 Dashboard</a></li>
   </ul>
 </div>
