--- a/veocel_2024q4.html
+++ b/veocel_2024q4.html
@@ -37,8 +37,7 @@
       <p> Click on the 'Full Screen' button at bottom-right corner for better visual experience. </p>
       <br>
       <div class="dashboard-container">
-        <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script><tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2024Q3VEOCELQuarterlyDashboardFinalV2/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>
-      <br>
+        <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script><tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/bcwglobal/views/2024Q4VEOCELQuarterlyDashboardFinalV2/Cover' width='1300' height='772' hide-tabs toolbar='bottom' ></tableau-viz>      <br>
       <br>
       <br>
       <p style="color:#414042; font-size:70%;"> ​Copyright @2022 by BCW Global </p>
