--- a/veocel_2025q1.html
+++ b/veocel_2025q1.html
@@ -18,6 +18,7 @@
         $("#dashboardversions-2022").load("dashboard_versions_veocel.html");
         $("#dashboardversions-2023").load("dashboard_versions_veocel_2023.html");
         $("#dashboardversions-2024").load("dashboard_versions_veocel_2024.html");
+        $("#dashboardversions-2025").load("dashboard_versions_veocel_2025.html");
       });
       </script>  
     </head>
@@ -31,6 +32,7 @@
       <div style="display: inline-block" id="dashboardversions-2022"></div>
       <div style="display: inline-block" id="dashboardversions-2023"></div>
       <div style="display: inline-block" id="dashboardversions-2024"></div>
+      <div style="display: inline-block" id="dashboardversions-2025"></div>
       </div>
       <br>
       <br>
