--- a/dashboard_versions_ecovero_2025.html
+++ b/dashboard_versions_ecovero_2025.html
@@ -4,5 +4,6 @@
   <ul role="menu" class="dropdown-menu">
       <li><a class="dropdown-item" href="ecovero_2025q1.html">2025 Q1 Dashboard</a></li>
       <li><a class="dropdown-item" href="ecovero_2025q2.html">2025 Q2 Dashboard</a></li>
+      <li><a class="dropdown-item" href="ecovero_2025q3.html">2025 Q3 Dashboard</a></li>
   </ul>
 </div>
