--- a/dashboard_versions_tencel_2025.html
+++ b/dashboard_versions_tencel_2025.html
@@ -5,5 +5,6 @@
         <li><a class="dropdown-item" href="tencel_2025q1.html">2025 Q1 Dashboard</a></li>
         <li><a class="dropdown-item" href="tencel_2025q2.html">2025 Q2 Dashboard</a></li>
         <li><a class="dropdown-item" href="tencel_2025q3.html">2025 Q3 Dashboard</a></li>
+        <li><a class="dropdown-item" href="tencel_2025q4.html">2025 Q4 Dashboard</a></li>
   </ul>
 </div>
